server.yaml
apiVersion: blog/v1
kind: Deployment
metadata:
    name: api-server
spec:
    selector:
        matchLabels:
            app: blog
            tier: backend
    strategy: 
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 3
    replicas: 2
    template:
        metadata:
            labels:
                app: blog
                tier: backend
            spec:
                containers:
                    - name: api-server
                      image: ./server
                      imagePullPolicy: IfNotPresent
                      ports:
                          - containerPort: 80
                      #command: ["asdf", "asdf"]
---
