k8s_apiserver.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-server-service
spec:
    type: NodePort
    selector:
        app: api-server
        tier: backend
    ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
    name: internal-api-server-service
spec:
    type: ClusterIP
    selector:
        app: api-server
        tier: backend
    ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-server
spec:
    selector:
        matchLabels:
            app: api-server
            tier: backend
    strategy: 
        type: RollingUpdate
    replicas: 1
    template:
        metadata:
            labels:
                app: api-server
                tier: backend
        spec:
            containers:
                - name: blog-api-server
                  image: us.gcr.io/${PROJECT_ID}/blog-api-server:${CIRCLE_SHA1}
                  imagePullPolicy: IfNotPresent
                  ports:
                    - containerPort: 5000
                      name: http
