k8s_front.yaml
apiVersion: v1
kind: Service
metadata:
    name: front-server-service
spec:
    type: NodePort
    selector:
        app: blog-front
        tier: front
    ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: blog-front
spec:
    selector:
        matchLabels:
            app: blog-front
            tier: front
    replicas: 1
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: blog-front
                tier: front
        spec:
            containers:
                - name: blog-front
                  image: us.gcr.io/${PROJECT_ID}/blog-front-server:${CIRCLE_SHA1}
                  imagePullPolicy: IfNotPresent
                  ports:
                    - containerPort: 3000
                      name: http
                  readinessProbe:
                      httpGet:
                          path: /healthz
                          port: 3000
