ingress.dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: puppyloper.blog
    http:
      paths:
      - path: /
        backend:
          serviceName: blog-front
          servicePort: 80
  - host: api.puppyloper.blog
    http:
      paths:
      - path: /
        backend:
          serviceName: blog-api-server
          servicePort: 80
