ingress.yaml
apiVersion: v1
data:
  tls.crt: /var/lib/secrets/api/api.cert
  tls.key: /var/lib/secrets/api/api.key
kine: Secret
metadata:
  name: blog-api-server-cert
type: Opaque
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  tls:
    secretName: blog-front-cert
    secretName: blog-api-server-cert
  rules:
  - host: puppyloper.blog
    http:
      paths:
      - path: /
        backend:
          serviceName: blog-front
          servicePort: 3000
  - host: api.puppyloper.blog
    http:
      paths:
      - path: /
        backend:
          serviceName: blog-api-server
          servicePort: 5000
