k8s.yaml
apiVersion: v1
kind: Service
metadata:
    name: front-server-service
spec:
    type: NodePort
    selector:
        app: blog-front
        tier: front
    ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: blog-front
spec:
    selector:
        matchLabels:
            app: blog-front
            tier: front
    replicas: 1
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: blog-front
                tier: front
        spec:
            containers:
                - name: blog-front
                  image: us.gcr.io/${PROJECT_ID}/blog-front-server:${CIRCLE_SHA1}
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                        name: http
                      - containerPort: 3001
                        name: https
---
apiVersion: v1
kind: Service
metadata:
    name: dgraph-server-service
    labels:
        db: dgraph
spec:
    selector:
        db: dgraph
    ports:
    - protocol: TCP
      name: dgraph-server-port
      port: 9080
      targetPort: 9080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: dgraph
spec:
    serviceName: "dgraph"
    replicas: 1
    selector:
        matchLabels:
            db: dgraph
            tier: backend
    template:
        metadata:
            labels:
                db: dgraph
                tier: backend
        spec:
            containers:
            - name: zero
              image: dgraph/dgraph:v1.0.11
              imagePullPolilcy: IfNotPresent
              ports:
              - containerPort: 5080
                name: grpc
              - containerPort: 6080
                name: http
              volumeMounts:
              - name: dgraph-pv
                mountPath: /dgraph-data
              command:
                - bash
                - "-c"
                - |
                  set -ex
                  dgraph zero --my=$(hostname -f):5080
            - name: alpha
              image: dgraph/dgraph:v1.0.11
              imagePullPolicy: IfNotPresent
              ports:
              - containerPort: 8080
                name: http
              - containerPort: 9080
                name: grpc
              volumeMounts:
              - name: dgraph-pv
                mountPath: /dgraph-data
              command:
                  - bash
                  - "-c"
                  - |
                    set -ex
                    dgraph alpha --my=$(hostname -f):7080 --lru_mb 2048 --zero dgraph-0.dgraph.${POD_NAMESPACE}.svc.cluster.local:5080
          terminationGracePeriodSeconds: 60
          volumes:
          - name: dgraph-pv
            persistentVolumeClaim:
                claimName: dgraph-pv
    updateStrategy:
        type: RollingUpdate
    volumeClaimTemplates:
    - metadata:
          name: dgraph-pv
          annotations:
              volume.alpha.kubernetes.io/storage-class: persistent-volume
      spec:
          accessModes:
              - "ReadWriteOnce"
          resources:
            requests:
                storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
    name: api-server-service
spec:
    type: NodePort
    selector:
        app: api-server
        tier: backend
    ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
    - protocol: TCP
      name: https
      port: 443
      targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-server
spec:
    selector:
        matchLabels:
            app: api-server
            tier: backend
    strategy: 
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 2
    replicas: 1
    template:
        metadata:
            labels:
                app: api-server
                tier: backend
        spec:
            containers:
                - name: blog-api-server
                  image: us.gcr.io/${PROJECT_ID}/blog-api-server:${CIRCLE_SHA1}
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 5000
                        name: http
                      - containerPort: 5001
                        name: https
# ---
# apiVersion: v1
# data:
#   tls.crt: /var/lib/secrets/front/front.cert
#   tls.key: /var/lib/secrets/front/front.key
# kind: Secret
# metadata:
#   name: blog-front-cert
# type: Opaque
# ---
# apiVersion: v1
# data:
#   tls.crt: /var/lib/secrets/api/api.cert
#   tls.key: /var/lib/secrets/api/api.key
# kine: Secret
# metadata:
#   name: blog-api-server-cert
# type: Opaque
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  # tls:
  #   secretName: blog-front-cert
  #   secretName: blog-api-server-cert
  rules:
  - host: blog.puppyloper.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-server-service
          servicePort: 3000
  - host: api.puppyloper.blog
    http:
      paths:
      - path: /
        backend:
          serviceName: api-server-service
          servicePort: 5000
