k8s_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: blog-ingress
    annotations:
        kubernetes.io/ingress.global-static-ip-name: blog-public-static-ip
        networking.gke.io/managed-certificates: front-server-certificate,api-server-certificate
    labels:
        app: blog-ingress
spec:
    rules:
    - host: blog.puppyloper.com
      http:
          paths:
          - backend:
              serviceName: front-server-service
              servicePort: 3000
    - host: api.puppyloper.com
      http:
          paths:
          - backend:
              serviceName: api-server-service
              servicePort: 5000
    - http:
        paths:
            - backend:
                serviceName: front-server-service
                servicePort: 3000
